--- a/Modulo0Katas.ipynb
+++ b/Modulo0Katas.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ejercicio 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -140,6 +147,13 @@
     "            print(\"Nave Detenida\")\n",
     "\n",
     "ignition.observe(on_value_change, names='value')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ejercicio 2"
    ]
   },
   {
